fixing position for z-index on marquee

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ strong{
   bottom:0;
   left: 0;
   padding: 8px 0;
+  z-index: 9;
   display: flex;
   line-height: 30px;
   background: #D4EAED;
@@ -282,6 +283,7 @@ nav select{
 	width: auto;
 	background: transparent;
 }
+
 nav select:focus{
 	outline: none;
 }
@@ -324,6 +326,7 @@ main .two-column a{
 nav select{
 	margin-top: 20px;
 }
+
 nav ul li{
 	margin: 15px 0;
 }
@@ -647,6 +650,7 @@ img.magnifying-glass, img.globe{
 	font-family: inherit;
 	color:  #333;
 	border: 0px solid #333;
+	background: #f5f5f5;
 	background: linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
 	padding: 2px 8px;
   margin:  10px 2px;
